# pc-toolkit-pro

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  pc_cleaner.py  pc_toolkit_pro.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
modules/: menu_manager.py  power_manager.py  quick_actions.py  system_cleaner.py  system_info_manager.py  system_info_widget.py  system_monitor.py  system_tray.py  tray_icon_manager.py
ui/: themes.py
