[project]
name = "pc-toolkit-pro"
version = "2.1"
description = "A comprehensive PC toolkit for system monitoring, cleaning, power management, and quick actions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.3",
    "psutil>=7.0.0",
    "pyinstaller>=6.14.2",
    "pyqt6>=6.9.1",
]
